# miniprot-rs

./: .gitmodules  Cargo.toml  out_expand.rs
miniprot-sys/: Cargo.toml  README.md  build.rs  miniprot.h
miniprot-sys/src/: bindings.rs  lib.rs
src/: lib.rs
test_data/: A0A5D4N6A0.faa  LZP_00103_fake_and_LZP_00103_P42405.fsa  LZP_9_and_10_A0A5D4N6A0.fsa  P42405.faa  aln_simple_prot.paf  test_prot.fa  test_simple_prot.fa
