[package]
name = "miniprot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniprot-sys = { path = "./miniprot-sys" }
lazy_static = "1.4.0"
fffx = "0.1.2"
libc = "0.2"
noodles = { version = "0.27", features = ["gff", "vcf", "core", "bgzf"] }
strum = "0.24"
strum_macros = "0.24"