[package]
name = "miniprot-sys"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Bindings to libminiprot"
repository = "https://github.com/jguhlin/miniprot-rs"
categories = ["science", "external-ffi-bindings"]
keywords = ["bioinformatics", "fasta", "alignment", "ffi", "protein"]
exclude = [
	"**/*.fasta",
	"libsfasta/test_data/",
	"*.profdata",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[build-dependencies]
pkg-config = "0.3.25"
libc = "0.2"
libz-sys = { version = "1.1.3" }

[build-dependencies.bindgen]
optional = true
version = "0.63"
default-features = false
features = ["runtime", "which-rustfmt"]

[build-dependencies.cc]
version = "1.0.45"

[features]
default = []
vendored = ["bindgen"]
