[package]
name = "miniprot-sys"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Bindings to libminiprot"
links = "libminiprot"
repository = "https://github.com/jguhlin/miniprot-rs"
categories = ["science", "external-ffi-bindings"]
keywords = ["bioinformatics", "fasta", "alignment", "ffi", "protein"]
exclude = [
	"**/*.fasta",
	"libsfasta/test_data/",
	"*.profdata",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libz-sys = { version = "1.1.8", default-features = false, features = ["libc"] }

[build-dependencies]
pkg-config = "0.3.26"
libc = "0.2"

[build-dependencies.bindgen]
optional = true
version = "0.63"
default-features = false
features = ["runtime", "which-rustfmt"]

[build-dependencies.cc]
version = "1.0.78"

[features]
default = []
vendored = ["bindgen"]
